remove font links

--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Assignment 6: Dorling Cartogram</title>
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700' rel='stylesheet' type='text/css'>
-        <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,400italic' rel='stylesheet' type='text/css'>
+		<title>Soil map</title>
         <link href="css/bootstrap.min.css" rel="stylesheet"/>
         <link href="style.css" rel="stylesheet"/>
 	</head>
