--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<div class="row vis-row">
 							<div class="col-md-9">
 								<div class="svg-row">
-									<div id="vis-div">
+									<div id="vis-div svg-container">
 										<div class="canvas" id="map">
 									</div>
 								</div>
@@ -69,8 +69,9 @@
 
 
 		<!-- Scripts -->
-        <script src="script/lib/d3/d3.min.js" charset="utf-8"></script>
-        <script src="script/lib/queue/queue.min.js"></script>
+        <script src="script/vendor/d3.v4.2.6.min.js" charset="utf-8"></script>
+        <script src="script/vendor/queue.min.js"></script>
+		<script src="script/vendor/topojson.v1.js"></script>
         <script src="script/script.js"></script>
 	</body>
 </html>
