adjust label zoom, point size, update names

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Soil map</title>
+		<title>Talking Dirt</title>
         <link href="css/bootstrap.min.css" rel="stylesheet"/>
         <link href="style.css" rel="stylesheet"/>
 	</head>
@@ -51,7 +51,7 @@
 							<div class="col-md-3">
 
 								<div id="synopsis"><br>I asked a group of friends to send soil samples from all over the country for inclusion in my final thesis exhibition in April.
-									These samples will be an important part of making the data in my project more personal, and will help show how soil touches all of our lives. This map shows where the samples have come from, and will be updated as they arrive.</div>
+									These samples will be an important part of making the data in my project more personal, and will help show how soil touches all of our lives. This map shows where the samples have come from, and will be updated as they arrive. Click on a state to zoom in.</div>
 
 							</div>
 						</div>
